--- a/style.css
+++ b/style.css
@@ -51,30 +51,36 @@ aside{
     grid-area: aside;
     background-color: #495057;
     min-height: 83vh;
+    min-width: 250px;
 }
 .menu{
     margin-top: 1em;
     display: grid;
-    justify-content: space-around;
-    border: 1px solid rebeccapurple;
+    /* justify-content: space-around; */
 
     
 }
 .menu li{
     list-style: none;
-    padding-top: 1em;
+    padding:1em;
+    text-align: center;
+
 }
 .menu li a{
+
     text-decoration: none;
     color: white;
     letter-spacing: 1px;
+    font-size: 1.3rem;
 }
 
 .company-name{
     display: grid;
     justify-content: center;
     align-items: center;
-    padding-top: .7em;
+    padding:.7em 0;
+    border-bottom: 2px solid black;
+    opacity: 0.3;
     
 }
 .icon{
@@ -82,9 +88,7 @@ aside{
 }
 main{
     grid-area: main;
-
     background-color: #CAD2C5;
-
 }
 
 .content{
@@ -97,10 +101,52 @@ main{
 
 
 }
+p{
+    line-height: 1.6em;
+}
+h1{
+    line-height: 1.5em;
+}
 footer{
     grid-area: footer;
     padding: 2em;
     background-color: #6c757d;
     color: rgba(255, 255, 255,.8);
     justify-content: space-between;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-content: space-between;
+    align-items: center;
+}
+footer p{
+    font-size: 1.2rem;
+    display: grid;
+}
+footer ul{
+    display: grid;
+    grid-template-columns: repeat(3,100px);
+    justify-content: end;
+}
+
+footer ul li{
+     list-style: none;
+     margin: 0 auto;
+}
+
+@media (max-width:790px){
+
+    .container{
+
+        display: grid;
+        grid-template-columns: repeat(6,1fr);
+        /* grid-template-rows: minmax(100px,auto); */
+        width: 100%;
+        grid-template-areas: 'header header header header header header'
+                            'main main main main main main '
+                            'footer footer footer footer footer footer';
+    }
+    aside{
+        display: none;
+    }
+    
 }
